--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,10 +8,7 @@
 <body>
     <main>
         <h1>Minha lista de tarefas</h1>
-        <ul>
-            <li>ir ao mercado</li>
-            <li>cortar cabelo</li>
-            <li>estudar python</li>
+        <ul id="tarefas">
         </ul>
     </main>
     <script src="./scripts.js"></script>
